--- a/i18n/contents+de.po
+++ b/i18n/contents+de.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-06 14:16+CET\n"
-"PO-Revision-Date: 2018-11-06 12:45+0100\n"
-"Last-Translator: emmapeel <emma.peel@riseup.net>\n"
+"PO-Revision-Date: 2018-11-06 16:21+0000\n"
+"Last-Translator: emma peel <emmapeel@torproject.org>\n"
 "Language-Team: none\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.11\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.2.2\n"
 
 #: http://localhost/security-slider/
 #: (content/security-slider/contents+en.lr:topic.description)
@@ -235,7 +235,7 @@ msgstr ""
 "anmeldest, steht es dir frei, exakt festzulegen welche Informationen du für "
 "die Internetseite, die du gerade besuchst, freigibst. Das Einloggen mit dem "
 "Tor Browser ist ebenso hilfreich, wenn die Internetseite, die du zu "
-"erreichen versuchst, in deinem Netzwerk blockiert wurde."
+"erreichen versuchst, in deinem Netzwerk blockiert wurde. "
 
 #: http://localhost/managing-identities/
 #: (content/managing-identities/contents+en.lr:topic.body)
@@ -245,12 +245,12 @@ msgstr "##### Neuer Kanal für diese Seite"
 #: http://localhost/security-slider/
 #: (content/security-slider/contents+en.lr:topic.body)
 msgid "Standard"
-msgstr "Standard"
+msgstr "Standard\n"
 
 #: http://localhost/becoming-tor-translator/
 #: (content/becoming-tor-translator/contents+en.lr:topic.description)
 msgid "Becoming a translator for the Tor Project"
-msgstr "Werde Übersetzer für das Tor-Projekt."
+msgstr "Werde Übersetzer für das Tor-Projekt"
 
 #: http://localhost/downloading/
 #: (content/downloading/contents+en.lr:topic.body)
